<?xml version="1.0"?>
<package format="2">
  <name>panda_project_robot_pc</name>
  <version>0.0.0</version>
  <description>The panda_project_robot_pc package</description>


  <maintainer email="crslab@todo.todo">crslab</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>franka_msgs</depend>


  <build_depend>message_generation</build_depend> <!-- added by weicong -->
  <build_depend>franka_gripper</build_depend> <!-- added by weicong -->
  <build_depend>robotiq_2f_gripper_control</build_depend> 
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
 
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>

  <export>

  </export>
</package>
